# cosmic-ext-applet-caffeine

./: .gitignore  Cargo.toml  LICENSE  README.md  justfile  net.tropicbliss.CosmicExtAppletCaffeine.yml
flatpak/: cargo-sources.json
i18n/en/: cosmic_ext_applet_caffeine.ftl
i18n/sv/: cosmic_ext_applet_caffeine.ftl
i18n/zh-CN/: cosmic_ext_applet_caffeine.ftl
res/: net.tropicbliss.CosmicExtAppletCaffeine.desktop  net.tropicbliss.CosmicExtAppletCaffeine.metainfo.xml
src/: caffeine.rs  localize.rs  main.rs  timer.rs  window.rs
